# bevy_salva

./: Cargo.toml  README.md
bevy_salva2d/: Cargo.toml
bevy_salva2d/examples/: basic2d.rs
bevy_salva3d/: Cargo.toml
src/: fluid.rs  lib.rs  main.rs  plugin.rs  rapier_integration.rs  systems.rs  utils.rs
src/plugin/: configuration.rs  mod.rs  plugin.rs  salva_context.rs  systems.rs
testing/: Cargo.toml  main.rs
