[package]
name = "bevy_salva"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_flycam = "0.15.0"
bevy_rapier3d = "0.28.0"
salva3d = { version = "0.9.0", features = ["sampling"] }

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
salva3d = { git = "https://github.com/nsjvidana/salva.git", branch = "bevy_rapier_coupling" }
