[package]
name = "bevy_salva"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_flycam = "0.15.0"
bevy_rapier3d = "0.28.0"

[dependencies.salva3d]
git = "https://github.com/nsjvidana/salva.git"
rev = "5e5e09f"
features = ["sampling"]
version = "0.9.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
