[package]
name = "bevy_salva2d"
version = "0.1.0"
authors = ["Nilson J Vidanapatiranage <nilsonjvidana@gmail.com>"]
description = "2-dimensional particle-based fluid dynamics in Rust, unofficial Bevy plugin."
repository = "https://github.com/nsjvidana/bevy_salva"
readme = "../README.md"
keywords = ["physics", "dynamics", "particles", "fluids", "SPH"]
#license = ""
edition = "2021"

[lib]
path = "../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2"]
dim2 = []
rapier = ["bevy_rapier2d", "salva2d/rapier", "salva2d/sampling"]
parallel = ["salva2d/parallel"]


[dependencies]
nalgebra = { version = "0.33.2", features = ["convert-glam029"] }
bevy = "0.15.3"
bevy_rapier2d = { version = "0.29.0", optional = true }
bitflags = "2.6.0"

[dependencies.salva2d]
git = "https://github.com/nsjvidana/salva.git"
rev = "c2fd202"
version = "0.9.0"
