[package]
name = "bevy_salva2d"
version = "0.1.0"
authors = ["Nilson J Vidanapatiranage <nilsonjvidana@gmail.com>"]
description = "2-dimensional particle-based fluid dynamics in Rust, unofficial Bevy plugin."
repository = "https://github.com/nsjvidana/bevy_salva"
readme = "../README.md"
keywords = ["physics", "dynamics", "particles", "fluids", "SPH"]
#license = ""
edition = "2021"

[lib]
path = "../src/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3"))',
] }

[features]
default = ["dim2", 'rapier']
dim2 = []
rapier = ["bevy_rapier2d", "salva2d/rapier", "salva2d/sampling"]
parallel = ["salva2d/parallel"]
serialize = ["bevy/serialize"]

[dependencies]
nalgebra = { version = "0.33.2", features = ["convert-glam029"] }
bevy = "0.16.1"
bevy_rapier2d = { version = "0.30.0", optional = true }
bitflags = "2.6.0"

serde = { version = "*", features = ["derive"] }
bevy_dev = "0.5.0"
bevy-inspector-egui = "0.31.0"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }

[dependencies.salva2d]
git = "https://github.com/moe-moe-pupil/salva"
branch = "master"

[dependencies.bevy_collider_gen]
git = "https://github.com/moe-moe-pupil/bevy_collider_gen"
branch = "main"
