[package]
name = "bevy_salva3d"
version = "0.1.0"
authors = ["Nilson J Vidanapatiranage <nilsonjvidana@gmail.com>"]
description = "3-dimensional particle-based fluid dynamics in Rust, unofficial Bevy plugin."
repository = "https://github.com/nsjvidana/bevy_salva"
readme = "../README.md"
keywords = ["physics", "dynamics", "particles", "fluids", "SPH"]
#license = ""
edition = "2021"

[lib]
path = "../src/lib.rs"
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[features]
default = ["dim3"]
dim3 = []
rapier = ["bevy_rapier3d", "salva3d/rapier", "salva3d/sampling"]


[dependencies]
nalgebra = { version = "0.33", features = ["convert-glam029"] }
bevy = "0.15.0"
bevy_rapier3d = { version = "0.28.0", optional = true }
bitflags = "2.6.0"

[dependencies.salva3d]
git = "https://github.com/nsjvidana/salva.git"
rev = "5e5e09f"
version = "0.9.0"
