[package]
name = "bevy_salva_testing"
version = "0.1.0"
edition = "2021"
default-run = "bevy_salva_testing"

[dependencies]
bevy = "0.15.0"
bevy_flycam = "0.15.0"
bevy_rapier3d = "0.28.0"
bevy_salva3d = { path = "../bevy_salva3d", features = ["rapier"] }

[[bin]]
name = "bevy_salva_testing"
path = "./main.rs"
